# coreutils

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  REUSE.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: clang-format-check.yaml  label.yml  pr_status.yml
cat/: CMakeLists.txt  cat.c
echo/: CMakeLists.txt  echo.c
ls/: CMakeLists.txt  ls.c
mv/: CMakeLists.txt
src/cat/: cat.c
src/echo/: echo.c
src/ls/: ls.c
src/mv/: CMakeLists.txt
